feat: Se ha termiando desde la parte de creacion la aprobacion de casos con pruebas complementarias

--- a/Front-End/src/assets/styles/main.css
+++ b/Front-End/src/assets/styles/main.css
@@ -27,3 +27,6 @@
 @import './vendor/fullcalendar.css';
 @import './vendor/swiper.css';
 @import './vendor/datepicker.css';
+
+/* Estilos de impresión y generación de PDF */
+@import './print.css';
