--- a/Back-End/app/modules/casos/templates/case_report.html
+++ b/Back-End/app/modules/casos/templates/case_report.html
@@ -444,8 +444,8 @@
     {% endif %}
 
     <!-- Additional Notes -->
-    {% if case.resultado and case.resultado.notas_adicionales %}
-  <div class="content-section"><div class="section-title">NOTAS ADICIONALES:</div><div class="content-box">{{ case.resultado.notas_adicionales }}</div></div>
+    {% if case.notas_adicionales and case.notas_adicionales|length > 0 %}
+  <div class="content-section"><div class="section-title">NOTAS ADICIONALES:</div><div class="content-box">{% for nota in case.notas_adicionales %}{% if nota.fecha %}{% set fecha = nota.fecha %}{% if fecha.strftime %}<strong>{{ fecha.strftime('%d/%m/%Y') }}</strong>{% else %}<strong>{{ fecha[:10] }}</strong>{% endif %}{% endif %}: {{ nota.nota }}{% if not loop.last %}<br/>{% endif %}{% endfor %}</div></div>
     {% endif %}
 
     <!-- Signature -->
