--- a/Back-End/app/modules/cases/templates/case_report.html
+++ b/Back-End/app/modules/cases/templates/case_report.html
@@ -7,7 +7,7 @@
   <style>
     /* PDF Page Rules for Footer */
     @page {
-      size: A4;
+      size: Letter;
       margin: 2mm 15mm 20mm 15mm;
       @bottom-right {
         content: "Página " counter(page) " de " counter(pages);
@@ -49,8 +49,8 @@
       line-height: 1.3;
     }
     .page { 
-      width: 210mm; 
-      min-height: 297mm; 
+      width: 216mm; 
+      min-height: 279mm; 
       padding: 2mm 15mm 20mm 15mm; 
       margin: 0 auto; 
       background: white; 
@@ -218,6 +218,21 @@
       break-inside: auto;
       margin-bottom: 0;
     }
+    /* List formatting inside content */
+    .content-box ul,
+    .content-box ol { 
+      margin: 0 0 0 18px; 
+      padding-left: 18px; 
+      white-space: normal; 
+    }
+    .content-box li { 
+      margin: 0 0 4px 0; 
+      padding: 0; 
+      list-style-position: outside; 
+    }
+    .content-box ol li { list-style-type: decimal; }
+    .content-box ul li { list-style-type: disc; }
+    .content-box li p { margin: 0; display: inline; }
     .content-box.large { margin-bottom: 0; }
     .content-box.small { margin-bottom: 0; }
     
