Implementacion de docker completa

--- a/Back-End/app/modules/cases/templates/case_report.html
+++ b/Back-End/app/modules/cases/templates/case_report.html
@@ -317,9 +317,9 @@
     <!-- Header with logos and code -->
     <div class="header-container">
       <div class="logos-section">
-        <img src="http://localhost:5174/src/assets/images/Logo-LIME-NoFondo.png" alt="LIME" class="logo" />
-        <img src="http://localhost:5174/src/assets/images/Banner_UDEA.png" alt="Universidad de Antioquia" class="logo" />
-        <img src="http://localhost:5174/src/assets/images/Baner_HAMA.png" alt="Hospital AlmaMáter" class="logo" />
+        <img src="{{ logos.lime }}" alt="LIME" class="logo" />
+        <img src="{{ logos.udea }}" alt="Universidad de Antioquia" class="logo" />
+        <img src="{{ logos.hama }}" alt="Hospital AlmaMáter" class="logo" />
       </div>
       <div class="code-box">
         <div class="code-row">
